[package]
name = "dover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
meval = "0.2"
plotters = "0.3.1"
plotters-canvas = "0.3.0"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }
